welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:26: error: value droite is not a member of Unit
for (i<- 1 to 5){avance()}droite()} 
                          ^